--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,10 @@
+<% if flash[:success] %>
+<div class="alert alert-success">
+  <strong>Success!</strong>
+  <%= flash[:success] %>
+</div>
+<% end %>
+
 <div class="panel panel-info">
   <div class="panel-heading">
     <div class="row">
