--- a/views/form.erb
+++ b/views/form.erb
@@ -8,8 +8,7 @@
     <h3> Create your message </h3>
   </div>
 
-  <form action="<%= messages_path %>" method="POST" class="navbar-form">
-
+  <form action="<%= messages_path %>" method="POST" class="navbar-form" style="text-align: center;">
     <div class="control_group">
       <div class="panel-body">    
         <div class="row">
@@ -23,8 +22,8 @@
         <div class="row">
           <div class="col-md-12">
             <div class="input-group">
-              <p><input type='radio' name='message[method]' value='time'> Delete the message through 1 hour </p>
               <p><input type='radio' name='message[method]' value='view'> Delete after the message will be viewed</p>
+              <p><input type='radio' name='message[method]' value='time'> Delete the message through 1 hour </p>
             </div>
           </div>
         </div>
