--- a/views/blank.erb
+++ b/views/blank.erb
@@ -9,8 +9,8 @@
 
   <div class="panel-body">    
     <div class="row">
-      <div class="col-md-6">
-        <h3> YOUR MESSAGE WAS DELETED </h3>
+      <div class="col-md-12">
+        <h3 style="text-align: center;"> YOUR MESSAGE WAS DELETED </h3>
       </div>
     </div>
   </div>
