--- a/views/index.erb
+++ b/views/index.erb
@@ -8,10 +8,17 @@
 <div class="panel panel-info">
   <div class="panel-heading">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-3">
         <h3 class="muted"> Messages </h3>
       </div>
-      <div class="col-md-6" style="margin-top: 10px;">
+
+      <div class="col-md-6" style="margin-top: 25px; text-align: center;">
+        <% if warden_handler.authenticated? %>
+            <%= current_user.username %>
+            <small><%=link_to "LOGOUT", '/logout', class: "" %></small>
+        <% end %>
+      </div>
+      <div class="col-md-3" style="margin-top: 15px;">
         <%=link_to "NEW", new_message_path, class: "btn btn-large btn-primary pull-right" %>
       </div>
     </div>
