--- a/views/show.erb
+++ b/views/show.erb
@@ -9,8 +9,8 @@
 
   <div class="panel-body">    
     <div class="row">
-      <div class="col-md-6">
-        <p><%= @message_descrypted %></p>
+      <div class="col-md-12">
+        <p style="text-align: center;"><%= @message_descrypted %></p>
       </div>
     </div>
   </div>
