--- a/views/signup.erb
+++ b/views/signup.erb
@@ -7,13 +7,12 @@
 <div class="panel panel-info">
 
   <div class="panel-heading">
-    <h3>login
-    <small><%= link_to 'Sign Up', '/signup' %></small>
+    <h3>Signup
+    <small><%= link_to 'Login', '/login' %></small>
     </h3>
   </div>
-
  
-  <form action="<%= '/session' %>" method="POST" class="form-inline" style="text-align: center;">
+  <form action="<%= '/signup' %>" method="POST" class="form-inline" style="text-align: center;">
     <div class="panel-body">    
       <div class="row">
         <div class="col-md-12">
@@ -22,7 +21,7 @@
           </div>
           <div class="form-group">
             <input type="password" class="form-control" id="password" placeholder="Password" name="user[password]" value=''>
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="btn btn-primary">Signup</button>
           </div>
         </div>
       </div>
